tests/fixtures/invalid/ord_int.py
# Cannot call ord() with Int
x = ord(1)
